Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 16:05+0200\n"
-"PO-Revision-Date: 2011-08-08 17:01+0200\n"
+"PO-Revision-Date: 2011-08-08 17:09+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7768,7 +7768,6 @@ msgid ""
 msgstr ""
 
 #: libraries/transformations/text_plain__external.inc.php:10
-#, fuzzy
 #| msgid ""
 #| "LINUX ONLY: Launches an external application and feeds it the field data "
 #| "via standard input. Returns the standard output of the application. The "
@@ -7792,17 +7791,16 @@ msgid ""
 "will prevent wrapping and ensure that the output appears all on one line "
 "(Default 1)."
 msgstr ""
-"LINUX VARTOTOJAMS: Paleidžiama išorinė aplikacija ir duomenys imami iš "
-"standartinio įvedimo. Išvedama iš aplikacijos gauta informacija. Nutylint: "
-"bus Tidy korektiškam HTML kodo išvedimui. Saugumo sumetimais Jūs turite "
-"paredaguoti libraries/transformations/text_plain__external.inc.php failą ir "
-"įvesti tas aplikacijas, kurias naudosite. Pirmas parametras yra leidžiamų "
-"aplikacijų kiekis, kurias naudosite. Antras parametras yra specifiniai "
-"aplikacijų raktai. Jeigu trečias parametras lygus 1, tai išvedama "
-"informacija bus apdorota su htmlspecialchars() (nutylint: reikšmė lygi 1). "
-"Jeigu ketvirtas parametras lygus 1, tai išvedimo lentelės celė turės "
-"atributą NOWRAP, tam kad išvedama būtų atvaizduota be perkėlimų į kitas "
-"eilutes (nutylint: reikšmė lygi 1)."
+"TIK LINUX: Paleidžiama išorinė programa ir duomenys imami iš standartinio "
+"įvedimo. Grąžinama iš programos standartinio išvedimo. Numatytasis yra Tidy "
+"pretty-print HTML kodui. Dėl saugumo, Jūs turite rankomis paredaguoti "
+"libraries/transformations/text_plain__external.inc.php failą ir išvardinti "
+"tuos įrankius kuriuos norite padaryti prieinamus. Pirmas parametras yra "
+"programos kurią norite naudoti skaičius. Antras parametras yra programos "
+"parametrai. Jeigu trečias parametras lygus 1, tai išvedama informacija bus "
+"apdorota su htmlspecialchars() (pagal numatymą reikšmė 1). Jeigu ketvirtas "
+"parametras lygus 1, tai išvengs žodžių karpymo ir garantuos, kad visas "
+"išvedimas bus vienoje eilutėje (pagal numatymą reikšmė 1)."
 
 #: libraries/transformations/text_plain__formatted.inc.php:10
 #, fuzzy
