--- a/po/lt.po
+++ b/po/lt.po
@@ -8184,10 +8184,9 @@ msgid "Rename to"
 msgstr "Pervadinti į"
 
 #: pmd_general.php:482 pmd_general.php:581
-#, fuzzy
 #| msgid "User name"
 msgid "New name"
-msgstr "Naudotojo vardas"
+msgstr "Naujas vardas"
 
 #: pmd_general.php:485 pmd_general.php:700
 #, fuzzy
