--- a/po/lt.po
+++ b/po/lt.po
@@ -8227,10 +8227,9 @@ msgid "Page creation failed"
 msgstr "Puslapio kūrimas nepavyko"
 
 #: pmd_pdf.php:89
-#, fuzzy
 #| msgid "pages"
 msgid "Page"
-msgstr "puslapiai"
+msgstr "Puslapis"
 
 #: pmd_pdf.php:99
 #, fuzzy
