Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 16:05+0200\n"
-"PO-Revision-Date: 2011-08-08 17:12+0200\n"
+"PO-Revision-Date: 2011-08-08 17:13+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -8237,10 +8237,9 @@ msgid "Import from selected page"
 msgstr "Importuoti iš pasirinkto puslapio"
 
 #: pmd_pdf.php:100
-#, fuzzy
 #| msgid "No rows selected"
 msgid "Export to selected page"
-msgstr "Nepasirinkti įrašai"
+msgstr "Eksportuoti pasirinktą puslapį"
 
 #: pmd_pdf.php:102
 #, fuzzy
