--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 16:05+0200\n"
-"PO-Revision-Date: 2011-08-08 17:13+0200\n"
+"PO-Revision-Date: 2011-08-08 17:14+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -8294,10 +8294,9 @@ msgid "Cannot save settings, submitted form contains errors"
 msgstr "Pateiktoje formoje yra klaidų"
 
 #: prefs_manage.php:78
-#, fuzzy
 #| msgid "Could not load default configuration from: %1$s"
 msgid "Could not import configuration"
-msgstr "Nepavyko užkrauti numatytų nustatymų failo iš: %1$s"
+msgstr "Nepavyko importuoti konfigūracijos"
 
 #: prefs_manage.php:110
 msgid "Configuration contains incorrect data for some fields."
