--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 16:05+0200\n"
-"PO-Revision-Date: 2011-08-08 17:14+0200\n"
+"PO-Revision-Date: 2011-08-08 17:16+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -8299,7 +8299,7 @@ msgstr "Nepavyko importuoti konfigūracijos"
 
 #: prefs_manage.php:110
 msgid "Configuration contains incorrect data for some fields."
-msgstr ""
+msgstr "Konfigūracijoje yra neteisingų duomenų tam tikruose laukeliuose."
 
 #: prefs_manage.php:126
 msgid "Do you want to import remaining settings?"
