--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 16:05+0200\n"
-"PO-Revision-Date: 2011-08-08 17:16+0200\n"
+"PO-Revision-Date: 2011-08-08 17:17+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -8572,9 +8572,8 @@ msgstr ""
 # gal labiau kartu vykstančių
 #: server_privileges.php:54 server_privileges.php:721
 #: server_privileges.php:723
-#, fuzzy
 msgid "Limits the number of simultaneous connections the user may have."
-msgstr "Riboti prisijungimų kiekį per valandą (kartu vykstančių)."
+msgstr "Riboti skaičių lygiagrečių prisijungimų kurį naudotojai gali turėti."
 
 #: server_privileges.php:55 server_privileges.php:225
 #: server_privileges.php:645
