--- a/po/lt.po
+++ b/po/lt.po
@@ -8905,10 +8905,10 @@ msgid "Unable to change master"
 msgstr "Nepavyko pakeisti pagrindinio (master) serverio"
 
 #: server_replication.php:72
-#, fuzzy, php-format
+#, php-format
 #| msgid "Master server changed succesfully to %s"
 msgid "Master server changed successfully to %s"
-msgstr "Pagrindinis (master) serveris pakeistas sėkmingai į %s"
+msgstr "Pagrindinis (master) serveris sėkmingai pakeistas į %s"
 
 #: server_replication.php:180
 msgid "This server is configured as master in a replication process."
