--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 16:05+0200\n"
-"PO-Revision-Date: 2011-08-08 17:19+0200\n"
+"PO-Revision-Date: 2011-08-08 17:20+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -9100,9 +9100,8 @@ msgid "Temporary data"
 msgstr "Laikini duomenys"
 
 #: server_status.php:499
-#, fuzzy
 msgid "Delayed inserts"
-msgstr "Naudoti užlaikytus įterpimus"
+msgstr "Užlaikyti įterpimai"
 
 #: server_status.php:500
 #, fuzzy
