--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 16:05+0200\n"
-"PO-Revision-Date: 2011-08-08 17:20+0200\n"
+"PO-Revision-Date: 2011-08-08 17:21+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -9145,10 +9145,9 @@ msgid "Runtime Information"
 msgstr "Veikimo informacija"
 
 #: server_status.php:650
-#, fuzzy
 #| msgid "See slave status table"
 msgid "All status variables"
-msgstr "Peržiūrėti pavaldžiojo serverio būklės lentelę"
+msgstr "Visi būsenos kintamieji"
 
 #: server_status.php:651
 msgid "Monitor"
