--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 16:05+0200\n"
-"PO-Revision-Date: 2011-08-08 17:21+0200\n"
+"PO-Revision-Date: 2011-08-08 17:22+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -9174,7 +9174,7 @@ msgstr ""
 
 #: server_status.php:714
 msgid "Filter by category..."
-msgstr ""
+msgstr "Filtruoti pagal kategoriją..."
 
 #: server_status.php:727
 #, fuzzy
