Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 16:05+0200\n"
-"PO-Revision-Date: 2011-08-08 17:22+0200\n"
+"PO-Revision-Date: 2011-08-08 17:23+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -9182,10 +9182,9 @@ msgid "Show unformatted values"
 msgstr "Rodyti nesuformatuotas reikšmes"
 
 #: server_status.php:731
-#, fuzzy
 #| msgid "Relations"
 msgid "Related links:"
-msgstr "Sąryšiai"
+msgstr "Susijusios nuorodos:"
 
 #: server_status.php:765
 msgid ""
