Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 16:05+0200\n"
-"PO-Revision-Date: 2011-08-08 17:23+0200\n"
+"PO-Revision-Date: 2011-08-08 17:24+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -9314,10 +9314,9 @@ msgid ""
 msgstr ""
 
 #: server_status.php:1144
-#, fuzzy
 #| msgid "Could not connect to MySQL server"
 msgid "The number of failed attempts to connect to the MySQL server."
-msgstr "Nepavyko prisijungti prie MySQL serverio"
+msgstr "Skaičius nepavykusių bandymų prisijungti prie MySQL serverio."
 
 #: server_status.php:1145
 msgid ""
