--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 16:05+0200\n"
-"PO-Revision-Date: 2011-08-08 17:25+0200\n"
+"PO-Revision-Date: 2011-08-08 17:26+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -9439,7 +9439,7 @@ msgstr "Skaičius užklausų, kad atnaujinti eilutę lentelėje."
 
 #: server_status.php:1166
 msgid "The number of requests to insert a row in a table."
-msgstr ""
+msgstr "Skaičius užklausų, kad įtraukti eilutę lentelėje."
 
 #: server_status.php:1167
 msgid "The number of pages containing data (dirty or clean)."
