--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 16:05+0200\n"
-"PO-Revision-Date: 2011-08-08 17:37+0200\n"
+"PO-Revision-Date: 2011-08-08 17:38+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -9705,9 +9705,8 @@ msgid "The number of streams that are open (used mainly for logging)."
 msgstr ""
 
 #: server_status.php:1223
-#, fuzzy
 msgid "The number of tables that are open."
-msgstr "Duomenų įrašymų skaičius."
+msgstr "Lentelių kurios yra atidarytos skaičius."
 
 #: server_status.php:1224
 msgid ""
