Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 16:05+0200\n"
-"PO-Revision-Date: 2011-08-08 17:38+0200\n"
+"PO-Revision-Date: 2011-08-08 17:39+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -9721,7 +9721,7 @@ msgstr ""
 
 #: server_status.php:1226
 msgid "The number of cache hits."
-msgstr "Podėlio pataikymų skaičius."
+msgstr "Podėlio kreipimųsi skaičius."
 
 #: server_status.php:1227
 msgid "The number of queries added to the cache."
