--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 16:05+0200\n"
-"PO-Revision-Date: 2011-08-08 17:39+0200\n"
+"PO-Revision-Date: 2011-08-08 17:40+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -9816,9 +9816,8 @@ msgid "The number of sorts that were done with ranges."
 msgstr ""
 
 #: server_status.php:1245
-#, fuzzy
 msgid "The number of sorted rows."
-msgstr "Įkeltų eilučių skaičius"
+msgstr "Surikiuotų eilučių skaičius."
 
 #: server_status.php:1246
 msgid "The number of sorts that were done by scanning the table."
