--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 16:05+0200\n"
-"PO-Revision-Date: 2011-08-08 17:40+0200\n"
+"PO-Revision-Date: 2011-08-08 17:41+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -9859,10 +9859,9 @@ msgid "The number of threads that are not sleeping."
 msgstr ""
 
 #: server_status.php:1392
-#, fuzzy
 #| msgid "Startup"
 msgid "Start Monitor"
-msgstr "Paleidimas"
+msgstr "Paleisti Monitor"
 
 #: server_status.php:1400
 #, fuzzy
