--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 16:05+0200\n"
-"PO-Revision-Date: 2011-08-08 17:42+0200\n"
+"PO-Revision-Date: 2011-08-08 17:43+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -9886,10 +9886,9 @@ msgid "Refresh rate"
 msgstr "Naujinimo dažnis"
 
 #: server_status.php:1419
-#, fuzzy
 #| msgid "Textarea columns"
 msgid "Chart columns"
-msgstr "Textarea laukeliai"
+msgstr "Diagramos stulpeliai"
 
 #: server_status.php:1435
 #, fuzzy
