--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 16:05+0200\n"
-"PO-Revision-Date: 2011-08-08 17:43+0200\n"
+"PO-Revision-Date: 2011-08-08 17:44+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -9950,10 +9950,9 @@ msgid ""
 msgstr ""
 
 #: server_status.php:1475
-#, fuzzy
 #| msgid "Usage"
 msgid "CPU Usage"
-msgstr "Išnaudota"
+msgstr "CPU išnaudota"
 
 #: server_status.php:1478
 msgid "Memory Usage"
