Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 16:05+0200\n"
-"PO-Revision-Date: 2011-08-08 17:53+0200\n"
+"PO-Revision-Date: 2011-08-08 17:54+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -10498,10 +10498,9 @@ msgid "You should use SSL connections if your web server supports it."
 msgstr "Naudokite SSL prisijungimus, jei Jūsų serveris juos palaiko."
 
 #: setup/lib/index.lib.php:336
-#, fuzzy
 #| msgid "You should use mysqli for performance reasons"
 msgid "You should use mysqli for performance reasons."
-msgstr "Jūs turėtumėte naudoti mysqli dėl našumo (efektyvumo) priežasčių"
+msgstr "Turėtumėte naudoti mysqli dėl našumo (efektyvumo) priežasčių."
 
 #: setup/lib/index.lib.php:367
 msgid "You allow for connecting to the server without a password."
