--- a/po/lt.po
+++ b/po/lt.po
@@ -10507,10 +10507,9 @@ msgid "You allow for connecting to the server without a password."
 msgstr "Jūs leidžiate prisijungti prie serverio be slaptažodžio."
 
 #: setup/lib/index.lib.php:389
-#, fuzzy
 #| msgid "Key is too short, it should have at least 8 characters"
 msgid "Key is too short, it should have at least 8 characters."
-msgstr "Raktas per daug trumpas, jis turėtų turėti bent 8 simbolius"
+msgstr "Raktas per trumpas, jis privalo turėti bent 8 simbolius."
 
 #: setup/lib/index.lib.php:396
 #, fuzzy
