--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 16:05+0200\n"
-"PO-Revision-Date: 2011-08-08 17:55+0200\n"
+"PO-Revision-Date: 2011-08-08 17:56+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -10649,7 +10649,7 @@ msgstr "Diagramos antraštė:"
 
 #: tbl_chart.php:100
 msgid "X-Axis:"
-msgstr "X-ašis"
+msgstr "X-ašis:"
 
 #: tbl_chart.php:114
 #, fuzzy
