--- a/po/lt.po
+++ b/po/lt.po
@@ -10667,10 +10667,9 @@ msgid "X-Axis label:"
 msgstr "X ašies etiketė:"
 
 #: tbl_chart.php:130
-#, fuzzy
 #| msgid "Value"
 msgid "X Values"
-msgstr "Reikšmė"
+msgstr "X Reikšmės"
 
 #: tbl_chart.php:131
 #, fuzzy
